[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/ui/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/fonts/menu_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/theme/fonts/big_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://game/ui/RankingLine.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/theme/gravity_theme.tres" type="Theme" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 320.0 ]
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.941176 )
margin_right = 640.0
margin_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0
margin_bottom = -24.0
custom_constants/separation = 16

[node name="Title" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 192.0
margin_right = 447.0
margin_bottom = 64.0
size_flags_horizontal = 4
custom_constants/separation = 0
alignment = 1

[node name="Letter" type="Label" parent="VBoxContainer/Title"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
margin_right = 30.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "G"

[node name="Letter2" type="Label" parent="VBoxContainer/Title"]
modulate = Color( 0.368627, 1, 0.662745, 1 )
margin_left = 30.0
margin_right = 60.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "A"

[node name="Letter3" type="Label" parent="VBoxContainer/Title"]
modulate = Color( 0.294118, 0.623529, 1, 1 )
margin_left = 60.0
margin_right = 100.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "M"

[node name="Letter4" type="Label" parent="VBoxContainer/Title"]
modulate = Color( 0.996078, 0.976471, 0.545098, 1 )
margin_left = 100.0
margin_right = 130.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "E"

[node name="Letter5" type="Label" parent="VBoxContainer/Title"]
margin_left = 130.0
margin_top = 19.0
margin_right = 140.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = " "

[node name="Letter6" type="Label" parent="VBoxContainer/Title"]
modulate = Color( 0.368627, 1, 0.662745, 1 )
margin_left = 140.0
margin_right = 170.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "O"

[node name="Letter7" type="Label" parent="VBoxContainer/Title"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
margin_left = 170.0
margin_right = 200.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "V"

[node name="Letter8" type="Label" parent="VBoxContainer/Title"]
modulate = Color( 0.996078, 0.976471, 0.545098, 1 )
margin_left = 200.0
margin_right = 230.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "E"

[node name="Letter9" type="Label" parent="VBoxContainer/Title"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
margin_left = 230.0
margin_right = 255.0
margin_bottom = 64.0
rect_min_size = Vector2( 25, 0 )
custom_fonts/font = ExtResource( 3 )
text = "R"
clip_text = true

[node name="Results" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 640.0
margin_bottom = 106.0

[node name="Title" type="Label" parent="VBoxContainer/Results"]
margin_left = 281.0
margin_right = 359.0
margin_bottom = 26.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Results"

[node name="RankingLine" parent="VBoxContainer/Results" instance=ExtResource( 4 )]
visible = false

[node name="VSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 640.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 32 )
custom_styles/separator = SubResource( 1 )

[node name="Text" type="Label" parent="VBoxContainer"]
margin_left = 224.0
margin_top = 170.0
margin_right = 416.0
margin_bottom = 199.0
rect_min_size = Vector2( 192, 0 )
size_flags_horizontal = 4
size_flags_vertical = 0
text = "If you're looking for a term that refers specifically."
align = 1
autowrap = true

[node name="Menu" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 226.0
margin_top = 215.0
margin_right = 413.0
margin_bottom = 247.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="QuitBtn" type="Button" parent="VBoxContainer/Menu"]
margin_top = 19.0
margin_right = 106.0
margin_bottom = 32.0
size_flags_vertical = 8
text = "QUIT TO MAIN MENU"

[node name="RestartBtn" type="Button" parent="VBoxContainer/Menu"]
margin_left = 122.0
margin_top = 19.0
margin_right = 187.0
margin_bottom = 32.0
size_flags_vertical = 8
text = "RESTART [R]"

[connection signal="pressed" from="VBoxContainer/Menu/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu/RestartBtn" to="." method="_on_RestartBtn_pressed"]
